Add externalAuthCondition
